PPL/refer/code_thanh/.antlr/MCParser.py
# Generated from /Users/macbook/Desktop/code_thanh/MC.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "';'", "','", 
                     "'_'", "'boolean'", "'break'", "'continue'", "'else'", 
                     "'for'", "'float'", "'if'", "'int'", "'return'", "'void'", 
                     "'do'", "'while'", "'true'", "'false'", "'string'", 
                     "'+'", "'*'", "'!'", "'||'", "'!='", "'<'", "'<='", 
                     "'='", "'-'", "'/'", "'%'", "'&&'", "'=='", "'>'", 
                     "'>='" ]

    symbolicNames = [ "<INVALID>", "BOOLEAN_TYPE", "INT_TYPE", "FLOAT_TYPE", 
                      "STRING_TYPE", "ARRAY_POINTER_INPUT_TYPE", "ARRAY_POINTER_OUTPUT_TYPE", 
                      "VOID_TYPE", "INT_LIT", "BOOLEAN_LIT", "FLOAT_LIT", 
                      "STRING_LIT", "LB", "RB", "LSB", "RSB", "LP", "RP", 
                      "SEMI", "COMMA", "UNDERSCORE", "BOOLEAN_KEYWORD", 
                      "BREAK_KEYWORD", "CONTINUE_KEYWORD", "ELSE_KEYWORD", 
                      "FOR_KEYWORD", "FLOAT_KEYWORD", "IF_KEYWORD", "INT_KEYWORD", 
                      "RETURN_KEYWORD", "VOID_KEYWORD", "DO_KEYWORD", "WHILE_KEYWORD", 
                      "TRUE_KEYWORD", "FALSE_KEYWORD", "STRING_KEYWORD", 
                      "ADD_OP", "MUL_OP", "NOT_OP", "OR_OP", "NOT_EQ_OP", 
                      "LESS_THAN_OP", "LESS_THAN_OR_EQ_OP", "ASS_OP", "SUB_OP", 
                      "DIV_OP", "MOD_OP", "AND_OP", "EQ_OP", "GREATE_THAN_OP", 
                      "GREATE_THAN_EQ_OP", "ID", "WS", "COMMENT", "LINE_COMMENT", 
                      "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_manyDeclarations = 1
    RULE_declaration = 2
    RULE_variableDeclaration = 3
    RULE_variableList = 4
    RULE_variable = 5
    RULE_functionDeclaration = 6
    RULE_parameterList = 7
    RULE_parameterDeclaration = 8
    RULE_blockStatement = 9
    RULE_bodyList = 10
    RULE_bodyDeclaration = 11
    RULE_statementDeclaration = 12
    RULE_ifStatement = 13
    RULE_matchIfStatement = 14
    RULE_unmatchIfStatement = 15
    RULE_otherStatement = 16
    RULE_forStatement = 17
    RULE_doWhileStatement = 18
    RULE_breakStatement = 19
    RULE_continueStatement = 20
    RULE_returnStatement = 21
    RULE_expressionStatement = 22
    RULE_expression = 23
    RULE_firstInferiority = 24
    RULE_secondInferiority = 25
    RULE_thirdInferiority = 26
    RULE_fourthInferiority = 27
    RULE_fifthInferiority = 28
    RULE_sixthInferiority = 29
    RULE_seventhInferiority = 30
    RULE_enghthInferiority = 31
    RULE_ninthInferiority = 32
    RULE_funtionCall = 33
    RULE_expressionList = 34
    RULE_primitiveType = 35
    RULE_functionType = 36

    ruleNames =  [ "program", "manyDeclarations", "declaration", "variableDeclaration", 
                   "variableList", "variable", "functionDeclaration", "parameterList", 
                   "parameterDeclaration", "blockStatement", "bodyList", 
                   "bodyDeclaration", "statementDeclaration", "ifStatement", 
                   "matchIfStatement", "unmatchIfStatement", "otherStatement", 
                   "forStatement", "doWhileStatement", "breakStatement", 
                   "continueStatement", "returnStatement", "expressionStatement", 
                   "expression", "firstInferiority", "secondInferiority", 
                   "thirdInferiority", "fourthInferiority", "fifthInferiority", 
                   "sixthInferiority", "seventhInferiority", "enghthInferiority", 
                   "ninthInferiority", "funtionCall", "expressionList", 
                   "primitiveType", "functionType" ]

    EOF = Token.EOF
    BOOLEAN_TYPE=1
    INT_TYPE=2
    FLOAT_TYPE=3
    STRING_TYPE=4
    ARRAY_POINTER_INPUT_TYPE=5
    ARRAY_POINTER_OUTPUT_TYPE=6
    VOID_TYPE=7
    INT_LIT=8
    BOOLEAN_LIT=9
    FLOAT_LIT=10
    STRING_LIT=11
    LB=12
    RB=13
    LSB=14
    RSB=15
    LP=16
    RP=17
    SEMI=18
    COMMA=19
    UNDERSCORE=20
    BOOLEAN_KEYWORD=21
    BREAK_KEYWORD=22
    CONTINUE_KEYWORD=23
    ELSE_KEYWORD=24
    FOR_KEYWORD=25
    FLOAT_KEYWORD=26
    IF_KEYWORD=27
    INT_KEYWORD=28
    RETURN_KEYWORD=29
    VOID_KEYWORD=30
    DO_KEYWORD=31
    WHILE_KEYWORD=32
    TRUE_KEYWORD=33
    FALSE_KEYWORD=34
    STRING_KEYWORD=35
    ADD_OP=36
    MUL_OP=37
    NOT_OP=38
    OR_OP=39
    NOT_EQ_OP=40
    LESS_THAN_OP=41
    LESS_THAN_OR_EQ_OP=42
    ASS_OP=43
    SUB_OP=44
    DIV_OP=45
    MOD_OP=46
    AND_OP=47
    EQ_OP=48
    GREATE_THAN_OP=49
    GREATE_THAN_EQ_OP=50
    ID=51
    WS=52
    COMMENT=53
    LINE_COMMENT=54
    ERROR_CHAR=55
    UNCLOSE_STRING=56
    ILLEGAL_ESCAPE=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def manyDeclarations(self):
            return self.getTypedRuleContext(MCParser.ManyDeclarationsContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_program




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.manyDeclarations()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ManyDeclarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MCParser.DeclarationContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_manyDeclarations




    def manyDeclarations(self):

        localctx = MCParser.ManyDeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_manyDeclarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 76
                self.declaration()
                self.state = 79 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.BOOLEAN_TYPE) | (1 << MCParser.INT_TYPE) | (1 << MCParser.FLOAT_TYPE) | (1 << MCParser.STRING_TYPE) | (1 << MCParser.ARRAY_POINTER_OUTPUT_TYPE) | (1 << MCParser.VOID_TYPE))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(MCParser.VariableDeclarationContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(MCParser.FunctionDeclarationContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_declaration




    def declaration(self):

        localctx = MCParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.functionDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitiveType(self):
            return self.getTypedRuleContext(MCParser.PrimitiveTypeContext,0)


        def variableList(self):
            return self.getTypedRuleContext(MCParser.VariableListContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def getRuleIndex(self):
            return MCParser.RULE_variableDeclaration




    def variableDeclaration(self):

        localctx = MCParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.primitiveType()
            self.state = 86
            self.variableList()
            self.state = 87
            self.match(MCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.VariableContext)
            else:
                return self.getTypedRuleContext(MCParser.VariableContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMMA)
            else:
                return self.getToken(MCParser.COMMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_variableList




    def variableList(self):

        localctx = MCParser.VariableListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variableList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.variable()
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.COMMA:
                self.state = 90
                self.match(MCParser.COMMA)
                self.state = 91
                self.variable()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def INT_LIT(self):
            return self.getToken(MCParser.INT_LIT, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_variable




    def variable(self):

        localctx = MCParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_variable)
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.match(MCParser.ID)
                self.state = 99
                self.match(MCParser.LSB)
                self.state = 100
                self.match(MCParser.INT_LIT)
                self.state = 101
                self.match(MCParser.RSB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionType(self):
            return self.getTypedRuleContext(MCParser.FunctionTypeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def parameterList(self):
            return self.getTypedRuleContext(MCParser.ParameterListContext,0)


        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def blockStatement(self):
            return self.getTypedRuleContext(MCParser.BlockStatementContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_functionDeclaration




    def functionDeclaration(self):

        localctx = MCParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_functionDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.functionType()
            self.state = 105
            self.match(MCParser.ID)
            self.state = 106
            self.match(MCParser.LB)
            self.state = 107
            self.parameterList()
            self.state = 108
            self.match(MCParser.RB)
            self.state = 109
            self.blockStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParameterListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameterDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.ParameterDeclarationContext)
            else:
                return self.getTypedRuleContext(MCParser.ParameterDeclarationContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.COMMA)
            else:
                return self.getToken(MCParser.COMMA, i)

        def getRuleIndex(self):
            return MCParser.RULE_parameterList




    def parameterList(self):

        localctx = MCParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.BOOLEAN_TYPE, MCParser.INT_TYPE, MCParser.FLOAT_TYPE, MCParser.STRING_TYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.parameterDeclaration()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MCParser.COMMA:
                    self.state = 112
                    self.match(MCParser.COMMA)
                    self.state = 113
                    self.parameterDeclaration()
                    self.state = 118
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [MCParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParameterDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitiveType(self):
            return self.getTypedRuleContext(MCParser.PrimitiveTypeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_parameterDeclaration




    def parameterDeclaration(self):

        localctx = MCParser.ParameterDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameterDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.primitiveType()
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 123
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.state = 124
                self.match(MCParser.ID)
                self.state = 125
                self.match(MCParser.LSB)
                self.state = 126
                self.match(MCParser.RSB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MCParser.LP, 0)

        def bodyList(self):
            return self.getTypedRuleContext(MCParser.BodyListContext,0)


        def RP(self):
            return self.getToken(MCParser.RP, 0)

        def getRuleIndex(self):
            return MCParser.RULE_blockStatement




    def blockStatement(self):

        localctx = MCParser.BlockStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_blockStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(MCParser.LP)
            self.state = 130
            self.bodyList()
            self.state = 131
            self.match(MCParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bodyDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.BodyDeclarationContext)
            else:
                return self.getTypedRuleContext(MCParser.BodyDeclarationContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_bodyList




    def bodyList(self):

        localctx = MCParser.BodyListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_bodyList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.BOOLEAN_TYPE) | (1 << MCParser.INT_TYPE) | (1 << MCParser.FLOAT_TYPE) | (1 << MCParser.STRING_TYPE) | (1 << MCParser.INT_LIT) | (1 << MCParser.BOOLEAN_LIT) | (1 << MCParser.FLOAT_LIT) | (1 << MCParser.STRING_LIT) | (1 << MCParser.LB) | (1 << MCParser.LP) | (1 << MCParser.BREAK_KEYWORD) | (1 << MCParser.CONTINUE_KEYWORD) | (1 << MCParser.FOR_KEYWORD) | (1 << MCParser.IF_KEYWORD) | (1 << MCParser.RETURN_KEYWORD) | (1 << MCParser.DO_KEYWORD) | (1 << MCParser.ID))) != 0):
                self.state = 133
                self.bodyDeclaration()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(MCParser.VariableDeclarationContext,0)


        def statementDeclaration(self):
            return self.getTypedRuleContext(MCParser.StatementDeclarationContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_bodyDeclaration




    def bodyDeclaration(self):

        localctx = MCParser.BodyDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_bodyDeclaration)
        try:
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.BOOLEAN_TYPE, MCParser.INT_TYPE, MCParser.FLOAT_TYPE, MCParser.STRING_TYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.variableDeclaration()
                pass
            elif token in [MCParser.INT_LIT, MCParser.BOOLEAN_LIT, MCParser.FLOAT_LIT, MCParser.STRING_LIT, MCParser.LB, MCParser.LP, MCParser.BREAK_KEYWORD, MCParser.CONTINUE_KEYWORD, MCParser.FOR_KEYWORD, MCParser.IF_KEYWORD, MCParser.RETURN_KEYWORD, MCParser.DO_KEYWORD, MCParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.statementDeclaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStatement(self):
            return self.getTypedRuleContext(MCParser.IfStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(MCParser.ForStatementContext,0)


        def blockStatement(self):
            return self.getTypedRuleContext(MCParser.BlockStatementContext,0)


        def doWhileStatement(self):
            return self.getTypedRuleContext(MCParser.DoWhileStatementContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(MCParser.BreakStatementContext,0)


        def continueStatement(self):
            return self.getTypedRuleContext(MCParser.ContinueStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(MCParser.ReturnStatementContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(MCParser.ExpressionStatementContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_statementDeclaration




    def statementDeclaration(self):

        localctx = MCParser.StatementDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_statementDeclaration)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.ifStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.forStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 145
                self.blockStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 146
                self.doWhileStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 147
                self.breakStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 148
                self.continueStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 149
                self.returnStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 150
                self.expressionStatement()
                pass

